--- a/theme.html
+++ b/theme.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
+      Only for test purpose.
       {% if is_login %}Login
       {% elif is_home %}{{ site.author }}
       {% elif is_tag %}{{ tag }}
