--- a/theme.html
+++ b/theme.html
@@ -32,7 +32,9 @@
     </script>
     {% endif %}
   </head>
-  <body{% if is_post or is_tag or is_page %} class="short-header"{% endif %}>
+  <body
+  <H1>TESTESTESTEST</H1>
+  {% if is_post or is_tag or is_page %} class="short-header"{% endif %}>
 
     {% if is_login %}
 
