--- a/theme.html
+++ b/theme.html
@@ -32,7 +32,7 @@
     </script>
     {% endif %}
   </head>
-  <body
+  <body>
   <H1>TESTESTESTEST</H1>
   {% if is_post or is_tag or is_page %} class="short-header"{% endif %}>
 
