--- a/theme.html
+++ b/theme.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <!-- TEST -->
+<!-- TEST2 -->
 <html prefix="og: http://ogp.me/ns#" xmlns:og="http://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
