append bootstrap template css
Первый апдейт для конвертации шаблона под новый "дизайн"

--- a/theme.html
+++ b/theme.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<!-- TEST -->
-<!-- TEST2 -->
 <html prefix="og: http://ogp.me/ns#" xmlns:og="http://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
@@ -18,6 +16,11 @@
 
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="{{ assets('css/style.css') }}">
+    <link href="{{ assets('css/bootstrap.css') }}" rel="stylesheet">
+	   <script src="http://code.jquery.com/jquery-latest.js"></script>
+	   <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+	   <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
+       <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
     <!-- standard google analytics -->
     {% if site.analytics %}
@@ -32,6 +35,63 @@
     })();
     </script>
     {% endif %}
+
+<style type="text/css">
+
+a:focus {
+	outline: none;
+}
+#panel {
+	background: #ccc;
+	display: none;
+		font-size: 16px;
+		  margin: 0 auto;
+}
+.slide {
+	margin: 0;
+	padding: 0;
+
+}
+.btn-slide {
+	background: url(images/white-arrow.gif) no-repeat right -50px;
+	text-align: center;
+	height: 31px;
+	padding: 15px 48px 0 0;
+	margin: 0 auto;
+		  padding: 46px 31px 67px 27px!important;
+	display: block;
+	font:  120%/100% Arial, Helvetica, sans-serif;
+	color: #fff;
+	text-decoration: none;
+}
+.active {
+	background-position: right 12px;
+}
+
+
+	body {
+
+	  width: 100%;
+
+	}
+
+
+	.dddq {
+
+
+	  color: rgb(195, 0, 0);
+  font-size: 20px;
+
+
+	}
+
+
+
+
+
+</style>
+
+
   </head>
   <body>
   <H1>TESTESTESTEST</H1>
