--- a/theme.html
+++ b/theme.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>
-      Only for test purpose.
       {% if is_login %}Login
       {% elif is_home %}{{ site.author }}
       {% elif is_tag %}{{ tag }}
@@ -17,10 +16,12 @@
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="{{ assets('css/style.css') }}">
     <link href="{{ assets('css/bootstrap.css') }}" rel="stylesheet">
-	   <script src="http://code.jquery.com/jquery-latest.js"></script>
-	   <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
-	   <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
-       <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
+    <!-- font and scripts -->
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
     <!-- standard google analytics -->
     {% if site.analytics %}
@@ -93,16 +94,70 @@ a:focus {
 
 
   </head>
-  <body>
-  <H1>TESTESTESTEST</H1>
-  {% if is_post or is_tag or is_page %} class="short-header"{% endif %}>
+  <body {% if is_post or is_tag or is_page %} class="short-header"{% endif %}>
 
     {% if is_login %}
 
     {{ login_form }}
 
     {% else %}
-    <header{% if is_post %} class="short"{% endif %}>
+    <header {% if is_post %} class="short"{% endif %}>
+   <div id="panel">
+     <div class="inf">
+       <div  class="avatar1"><img src="img/photo.jpg"></div> <!-- добавить ссылку на фото -->
+       <p>{{ site.bio|striptags|truncate(280, false, '...') }}</p>
+       <br>
+       <table border="0"><tr><td>Работа</td><td><a href="http://zaikin.su">ZogIT</a></td></tr>
+       <tr><td>Обучение</td><td><a href="http://edu.zaikin.pro">СурГУ</a></td></tr>
+       <tr><td>Ссылкочки</td><td><a href="http://lnk.zaikin.pro">Links</a></td></tr></table>
+
+          <ul class="user-social-links">
+            {% if site.twitter %}
+            <li>
+              <a href="{{ site.twitter }}" title="Twitter" target="_blank">
+                <i class="icon-twitter"></i> Twitter
+              </a>
+            </li>
+            {% endif %}
+
+            {% if site.facebook %}
+            <li>
+              <a href="{{ site.facebook }}" title="Facebook" target="_blank">
+                <i class="icon-facebook-sign"></i> Facebook
+              </a>
+            </li>
+            {% endif %}
+
+            {% if site.googleplus %}
+            <li>
+              <a href="{{ site.googleplus }}?rel=author" title="Google+" target="_blank">
+                <i class="icon-google-plus"></i> Google+
+              </a>
+            </li>
+            {% endif %}
+
+            {% if site.linkedin %}
+            <li>
+              <a href="{{ site.linkedin }}" title="LinkedIn" target="_blank">
+                <i class="icon-linkedin"></i> LinkedIn
+              </a>
+            </li>
+            {% endif %}
+            <li>
+              <a href="{{ site.atom_url }}" title="RSS" target="_blank">
+                <i class="icon-rss"></i> RSS
+              </a>
+            </li>
+          </ul>
+          <ul>
+            {% if theme.social.like %}<li>{{ theme.social.like }}</li>{% endif %}
+            {% if theme.social.follow %}<li>{{ theme.social.follow }}</li>{% endif %}
+            {% if theme.social.share %}<li>{{ theme.social.share }}</li>{% endif %}
+          </ul>
+
+
+		  </div>
+   </div>
       <div class="bg"></div>
       <div class="spinner"></div>
       <div class="shadow top"></div>
