--- a/theme.html
+++ b/theme.html
@@ -37,6 +37,18 @@
     </script>
     {% endif %}
 
+    	  <script type="text/javascript">
+$(document).ready(function(){
+
+	$(".btn-slide").click(function(){
+		$("#panel").slideToggle("slow");
+		$(this).toggleClass("active"); return false;
+	});
+
+
+});
+</script>
+
 <style type="text/css">
 
 a:focus {
@@ -157,23 +169,25 @@ a:focus {
 
 
 		  </div>
+
+
    </div>
-      <div class="bg"></div>
-      <div class="spinner"></div>
-      <div class="shadow top"></div>
-      <div class="overlay"></div>
-      <img src="{{ assets('images/rainbow-bg.png') }}" class="rainbow" />
-      <div class="container wide">
-        <h1><a href="{{ site.base_url }}">{{ site.name }}</a></h1>
-        {% if pages %}
-        <ul class="cover-nav">
-          <li><a href="{{ site.base_url }}">Blog</a></li>
-            {% for page in pages %}
-            <li><a href="{{ page.permalink }}" class="{{ set_active(page.permalink) }}">{{ page.title }}</a></li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-      </div>
+	<div class="container-fluid">
+      <div class="rowf">
+  	    <div class="container-fluid">
+          <div class="rwow">
+            <div class="menuu">
+              <a href="#" class="navbar-brand" >  <div class="avatar">	<img src="img/photo.jpg"> </div> </a>
+              <ul class="nav nav-tabs">
+              <li><p class="slide hjk"><a href="#" class="vatb btn-slide">Обо мне</a></p> </li>
+              <li><a class="hjk" href="{{ site.base_url }}">Блог</a> </li>
+              {% if pages %}
+                {% for page in pages %}
+                  <li><a class="hjk" href="{{ page.permalink }}">{{ page.title }}</a></li>
+                {% endfor %}
+              </ul>
+		</div>
+	</div></div></div></div>
     </header>
 
     <div class="container content">
