--- a/theme.html
+++ b/theme.html
@@ -185,6 +185,7 @@ a:focus {
                 {% for page in pages %}
                   <li><a class="hjk" href="{{ page.permalink }}">{{ page.title }}</a></li>
                 {% endfor %}
+              {% endif %}
               </ul>
 		</div>
 	</div></div></div></div>
