--- a/theme.html
+++ b/theme.html
@@ -14,7 +14,7 @@
     {{ header_meta }}
 
     <!-- css -->
-    <link rel="stylesheet" type="text/css" href="{{ assets('css/style.css') }}">
+    <!-- <link rel="stylesheet" type="text/css" href="{{ assets('css/style.css') }}"> -->
     <link href="{{ assets('css/bootstrap.css') }}" rel="stylesheet">
 
     <!-- font and scripts -->
