SS - second try (to get fonts)

--- a/theme.html
+++ b/theme.html
@@ -17,8 +17,8 @@
     <!-- <link rel="stylesheet" type="text/css" href="{{ assets('css/style.css') }}"> -->
     <link href="{{ assets('css/bootstrap.css') }}" rel="stylesheet">
   <!-- Social Share Kit CSS -->
-  <link rel="stylesheet" href="{{ assets('css/social-share-kit.css') }}" type="text/css">
-      <script type="text/javascript" src="your-path/social-share-kit.js"></script>
+    <link rel="stylesheet" href="{{ assets('css/social-share-kit.css') }}" type="text/css">
+    <script type="text/javascript" src="{{ assets('js/social-share-kit.js') }}"></script>
     <!-- font and scripts -->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
