--- a/theme.html
+++ b/theme.html
@@ -108,7 +108,7 @@ a:focus {
        <br>
        <table border="0"><tr><td>Работа</td><td><a href="http://zaikin.su">ZogIT</a></td></tr>
        <tr><td>Обучение</td><td><a href="http://edu.zaikin.pro">СурГУ</a></td></tr>
-       <tr><td>Ссылкочки</td><td><a href="http://lnk.zaikin.pro">Links</a></td></tr></table>
+       <tr><td>Ссылочки</td><td><a href="http://lnk.zaikin.pro">Links</a></td></tr></table>
 
           <!--<ul class="user-social-links"> -->
             {% if site.twitter %}
